--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,6 @@
-- Validação de Formulário;
 - HTML e Script Navegação;
 - Acessibilidade;
 - Media Queries - Tablet e Celular;
-- Conferir pequenas decorações em html ( u br, etc); Em CSS seria melhor;
-- Favicon SVG?;
-- Conferir Espaçamento entre as sections;
-- Adicionar Comentários no HTMl;
-- Readme;
+- Adicionar Comentários no HTML;
 - Conferência final para organização e otimização do código;
+- Readme;
